# goldenegg-tw-holdings-cli

./: .env-debug  .env.template  .gitignore  README.md  main.py  pyproject.toml  start.sh
.cursor/: mcp.json
.cursor/rules/: goldenegg-mcp-plugin-structure.mdc
borker/esun/: DockerFile  app.py  config.ini.template  docker-compose.yml
borker/fubon/: app.py  ocr_demo.py  test.py
borker/masterlink/: test.py
borker/sinopac/: .env  DockerFile  app.py  docker-compose.yml
broker/: base.py
broker/esun/: client.py  config.simulation.ini.template  reset.py
broker/esun/certs/: config.ini.template  config.simulation.ini.template
broker/fubon/: client.py  ocr.py
broker/masterlink/: client.py
broker/sinopac/: app.py  client.py
broker/tssco/: client.py
config/: settings.py
docs/: brokers.md  market_data_api_spec.md  troubleshooting.md
models/: __init__.py  accounts.py  common.py  holdings.py  market_data.py
models/data/: stock_info.json
service/: cli.py  holdings_service.py  mcp_server.py  storage_service.py
service/mcp/: __init__.py  prompts.py  resources.py  tools.py
test/: conftest.py  test_esun_integration.py  test_fubon_integration.py  test_masterlink_integration.py  test_shiopac_integration.py  test_sinopac_integration.py
test/integration/: helpers.py  test_esun_integration.py  test_fubon_integration.py  test_masterlink_integration.py  test_sinopac_integration.py  test_tssco_integration.py
test/unit/: test_esun_simple_unit.py  test_esun_unit.py  test_fubon_unit.py  test_holdings_service_unit.py  test_masterlink_unit.py  test_shinopac.py  test_tssco_settings_unit.py  test_tssco_unit.py
wheels/: README.md
